--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/build
+/node_modules
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -7,6 +9,7 @@ Desktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
+/target
 
 # Windows Installer files
 *.cab
